--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             hh = h / 2,
 
             opts = {
-                strings: ['CHÚC MỪNG', 'SINH NHẬT!', 'MY HÀ'],
+                strings: ['CHÚC MỪNG', 'SINH NHẬT!', 'NGỌC ANH'],
                 charSize: 120,
                 charSpacing: 120,
                 lineHeight: 120,
